// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen transactions config import-export] should create the transactions: the transactions has been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ transaction => name: 'cfgObjectTest', type: 'callData', tenant: 'Environment'
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen transactions config import-export] should update the transactions: the transactions has been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ transaction => name: 'cfgObjectTest', type: 'callData', tenant: 'Environment'
Completed. 1 object(s) imported.
",
}
`;
